[package]
name = "rsspls"
version = "0.7.1"
edition = "2021"
authors = [
    "Wesley Moore <wes@wezm.net>"
]

homepage = "https://github.com/wezm/rsspls"
repository = "https://github.com/wezm/rsspls.git"

readme = "README.md"
license = "MIT OR Apache-2.0"

description = "Generate RSS feeds from websites"
keywords = ["rss", "cli", "html", "webpage", "feed"]
categories = ["command-line-utilities", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anydate = "0.4.0"
atomicwrites = "0.4.3"
basic-toml = "0.1.8"
chrono = { version = "0.4.35", default-features = false }
futures = { version = "0.3.30", default-features = false, features = ["std"] }
kuchiki = "0.8.1"
log = "0.4.21"
mime_guess = { version = "2.0.4", default-features = false }
pico-args = "0.5.0"
pretty_env_logger = "0.5.0"
reqwest = { version = "0.11.24", default-features = false, features = ["rustls-tls", "gzip", "socks"] }
rss = "2.0.7"
serde = { version = "1.0.197", features = ["derive"] }
simple-eyre = "0.3.1"
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"] }
url = "2.5.0"

[dependencies.time]
version = "0.3.34"
features = ["parsing", "formatting", "macros"]

[target.'cfg(windows)'.dependencies]
dirs = "5.0.1"

[target.'cfg(not(windows))'.dependencies]
xdg = "2.5.2"
