[package]
name = "rsspls"
version = "0.11.2"
edition = "2021"
authors = [
    "Wesley Moore <wes@wezm.net>"
]

homepage = "https://github.com/wezm/rsspls"
repository = "https://github.com/wezm/rsspls.git"

readme = "README.md"
license = "MIT OR Apache-2.0"

description = "Generate RSS feeds from websites"
keywords = ["rss", "cli", "html", "webpage", "feed"]
categories = ["command-line-utilities", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anydate = "0.4.0"
atomicwrites = "0.4.3"
basic-toml = "0.1.9"
chrono = { version = "0.4.38", default-features = false }
cryptoxide = { version = "0.4.4", features = ["blake2"], default-features = false }
futures = { version = "0.3.30", default-features = false, features = ["std"] }
kuchiki = "0.8.1"
log = "0.4.22"
mime_guess = { version = "2.0.5", default-features = false }
pico-args = "0.5.0"
pretty_env_logger = "0.5.0"
reqwest = { version = "0.12.5", default-features = false, features = ["gzip", "socks"] }
rss = "2.0.8"
serde = { version = "1.0.205", features = ["derive"] }
simple-eyre = "0.3.1"
tokio = { version = "1.43.1", features = ["rt-multi-thread", "macros"] }
url = "2.5.2"

[dependencies.time]
version = "0.3.36"
features = ["parsing", "formatting", "macros"]

[target.'cfg(windows)'.dependencies]
dirs = "5.0.1"

[target.'cfg(not(windows))'.dependencies]
xdg = "2.5.2"

[profile.release]
strip = "debuginfo"

[features]
default = ["rust-tls"]
native-tls = ["reqwest/native-tls"]
rust-tls = ["reqwest/rustls-tls"]
